[tool.poetry]
name = "llama-cpp-guidance"
version = "0.1.2"
description = "A guidance compatibility layer for llama-cpp-python"
authors = ["Nicholas Yager <yager@nicholasyager.com>"]
readme = "README.md"
packages = [{ include = "llama_cpp_guidance" }]

[tool.commitizen]
version = "0.1.2"
version_files = ["pyproject.toml:^version"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
llama_cpp_python = ">=0.1.83"
guidance = "^0.0.64"
loguru = "^0.7.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
